--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
+    "start": "node --env-file=.env dist/server.js",
+    "postinstall": "npx tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file=.env --import=tsx --watch src/server.ts"
+    "dev": "node --env-file=.env --import=tsx --watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/mustache-express": "^1.2.5",
     "@types/node": "^22.4.0",
+    "copyfiles": "^2.4.1",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   },
